change start load

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -66,6 +66,9 @@
       // width: 40px;
       // height: 40px;
       // background-color: green;
+      margin-right: -1px;
+      margin-bottom: -1px;
+
       border-top-left-radius: $card_round;
       border-left: 50px solid rgb(0, 0, 0);
       border-bottom: 50px solid rgb(255, 255, 255);
